fixes deserialization of UpdateMatchingStatsMessage